fix: keep disabled text legible

--- a/src/styles/gooey.scss
+++ b/src/styles/gooey.scss
@@ -448,6 +448,12 @@
 	}
 }
 
+.gooey-controller-text.disabled {
+	color: var(--gooey-controller_color);
+	opacity: 0.8;
+	filter: brightness(0.8);
+}
+
 .gooey-controller {
 	contain: layout style;
 	width: 100%;
@@ -1353,7 +1359,7 @@ input.gooey-search-input {
 
 	&.disabled {
 		opacity: 0.8;
-		filter: brightness(0.5) contrast(1.3);
+		// filter: brightness(0.5) contrast(1.3);
 		pointer-events: none;
 	}
 
